<resources>
    <string name="app_name">CheckUp</string>
    <string name="username_txt">Username</string>
    <string name="email_example_com">email@example.com</string>
    <string name="password_txt">Password</string>
    <string name="log_in_txt">Log In</string>
    <string name="login_activity_title">Log In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_information">PATIENT PROFILE</string>
    <string name="create_data_packet">MESSENGER</string>
    <string name="heart_rate">HEART MONITOR</string>
    <string name="record_video">VIDEO SNIPPETS</string>
    <string name="send_local_file">MEDICAL REPORTS</string>
    <string name="facilities_map">NEAREST CLINICS</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="register_txt">New? Sign up for free.</string>
    <string name="back_txt">Back</string>
    <string name="next_txt">Forward</string>
    <string name="hello_txt_btn">New? Sign up for free.</string>
    <string name="title_activity_doctor_main">DoctorMainActivity</string>
    <string name="welcome_txt">Welcome to\nMyCheckUp!</string>
</resources>
